# mikrotik-proxy-manager

./: .dockeringore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  dev_compose.yaml  mikrotik_guide.md  pyproject.toml
.github/workflows/: docker-publish.yml  github-publish.yml
configs/: local_example.yml  local_middlware.yml
logs/: logs.0.txt
mikrotik-proxy-manager/: template.yaml
mikrotik_proxy_manager/: __main__.py  dns.py  mikrotik_client.py  models.py  settings.py  sync.py  traefik_writer.py
tests/: conftest.py  test_diff.py  test_models.py  test_reconcile.py  test_sync.py
traefik/: traefik.yml  traefik_cloudflare.yml
