[tool.poetry]
name = "mikrotik-proxy-manager"
version = "0.1.0"
description = ""
authors = ["Artur Akmalov <artur@akmalov.com>"]
readme = "README.md"
packages = [{include = "mikrotik_proxy_manager"}]

[tool.poetry.dependencies]
python = "^3.11"
watchdog = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
